chore: set git config for safe.directory

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -1,5 +1,10 @@
 ARG node_version
 FROM node:${node_version}-alpine
+
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+COPY gitconfig /etc/gitconfig
+
 ENV NODE_ENV=development
 ENV PATH=$PATH:/root/.pulumi/bin
 RUN apk add --no-cache aws-cli curl git libc6-compat vault libcap
