chore: add git into cypress images

--- a/cypress/Dockerfile
+++ b/cypress/Dockerfile
@@ -7,7 +7,8 @@ RUN apt-get update && \
     lsb-base \
     lsb-release \
     gnupg2 \
-    software-properties-common
+    software-properties-common \
+    git
 
 # Needed to get vault from hashicorp
 RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add - && \
