--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: |
             for version in $(cat .versions); do
                 docker buildx build --platform linux/arm64,linux/amd64 --build-arg node_version=${version} \
-                --tag quay.io/wealthwizards/ww-base-node:development--debian-${version} \
+                --tag quay.io/wealthwizards/ww-base-node:development-debian-${version} \
                 development-debian
             done
       - run:
@@ -89,13 +89,13 @@ jobs:
                 docker buildx build --push --platform linux/arm64,linux/amd64 --build-arg node_version=${version} --tag quay.io/wealthwizards/ww-base-node:development-${version} --tag quay.io/wealthwizards/ww-base-node:development-${major_version}.${minor_version} --tag quay.io/wealthwizards/ww-base-node:development-${major_version} --tag quay.io/wealthwizards/ww-base-node:development-latest development
             done
       - deploy:
-          name : build-push--debian--image
+          name : build-push-development-debian-image
           command: |
             for version in $(cat .versions); do
                 a=( ${version//./ } )
                 major_version=${a[0]}
                 minor_version=${a[1]}
-                docker buildx build --push --platform linux/arm64,linux/amd64 --build-arg node_version=${version} --tag quay.io/wealthwizards/ww-base-node:-debian--${version} --tag quay.io/wealthwizards/ww-base-node:-debian--${major_version}.${minor_version} --tag quay.io/wealthwizards/ww-base-node:-debian--${major_version} --tag quay.io/wealthwizards/ww-base-node:-debian--latest development-debian
+                docker buildx build --push --platform linux/arm64,linux/amd64 --build-arg node_version=${version} --tag quay.io/wealthwizards/ww-base-node:development-debian-${version} --tag quay.io/wealthwizards/ww-base-node:development-debian-${major_version}.${minor_version} --tag quay.io/wealthwizards/ww-base-node:development-debian-${major_version} --tag quay.io/wealthwizards/ww-base-node:development-debian-latest development-debian
             done
       - deploy:
           name : build-push-cypress-image
