--- a/alpine-dev/Dockerfile
+++ b/alpine-dev/Dockerfile
@@ -7,7 +7,7 @@ COPY gitconfig /etc/gitconfig
 
 ENV NODE_ENV=development
 ENV PATH=$PATH:/root/.pulumi/bin
-RUN apk add --no-cache aws-cli curl git libc6-compat vault libcap
+RUN apk add --no-cache aws-cli curl git libcap libc6-compat vault shellcheck shfmt
 # https://github.com/hashicorp/vault/issues/10048#issuecomment-706315167
 RUN setcap cap_ipc_lock= /usr/sbin/vault
 RUN curl -fsSL https://get.pulumi.com/ | sh
