--- a/playwright/Dockerfile
+++ b/playwright/Dockerfile
@@ -16,4 +16,6 @@ RUN curl -fsSL https://apt.releases.hashicorp.com/gpg | apt-key add - && \
 
 RUN apt-get update && \
     apt-get install -y \
-    vault
+    vault && \
+    setcap -r $(which vault) && \
+    vault -v
